# evaluatie

./: .gitignore  .pre-commit-config.yaml  README.md  approach-evaluation.ipynb  approach-evaluation.ipynb.license  bsim-evaluation.ipynb  call-graph-evaluation.ipynb  code-archive.ipynb  data-exploration.md  data-integrity.ipynb  database-population.ipynb  evaluatie-initdb  firmup-evaluation.ipynb  neighbsim-evaluation.ipynb  pyproject.toml  sampling.sql
.git-hooks/: pre-commit
.reuse/: dep5
data/kim2023revisiting/: README.md  unpack.sh
data/marcelli2022how/: README.md  unpack.sh
datasets/: ARCHIVE.md  README.md  call-graph:xaxb.csv  call-graph:xo.csv  call-graph:xo:o0xo3.csv  call-graph:xo:o2xo3.csv
docs/: debugging-postgres-plugins.md
evaluatie/: cfg.py  data.py  models.py  utils.py
evaluatie/firmup/: __init__.py  firmup-cte.sql  firmup.py  firmup.sql
evaluatie/neighbsim/: __init__.py  neighbsim.py
