# SPDX-FileCopyrightText: 2024 Marten Ringwelski
# SPDX-FileContributor: Marten Ringwelski <git@maringuu.de>
#
# SPDX-License-Identifier: AGPL-3.0-only

[tool.poetry]
name = "evaluatie"
version = "0.1.0"
description = ""
authors = ["Marten Ringwelski <git@maringuu.de>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
studeerwerk = { path = "../code/", develop = true }
attrs = "^23.2.0"
msgspec = "^0.18.6"
sqlalchemy = "^2.0.30"
sqlalchemy-utils = "^0.41.2"
scipy = "^1.13.1"
click = "^8.1.7"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
nbconvert = "^7.16.4"
notebook = "^7.1.3"
rich = {extras = ["jupyter"], version = "^13.7.1"}
pre-commit = "^3.7.1"
ghidra-stubs = "^11.0.3.1.0.4"
pyinstrument = "^4.6.2"

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E4", "E7", "E9",
    "F",
    "I",
    "PL",
    "UP",
]
ignore = []
fixable = ["ALL"]

